--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "babel-plugin-module-resolver": "^5.0.0",
     "customize-cra": "^1.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
